updation of picture in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <table cellspacing="40">
     <tr>
-      <td><img src="C:\Users\Sriram Ganesh\Documents\web development\html-personal site\sriram (2).jpg" alt="profile picture of SriramGanesh"></td>
+      <td><img src="https://github.com/SriramGaneshSG/personal-site/blob/master/sriram%20(2).jpg?raw=true" alt="profile picture of SriramGanesh"></td>
       <td><h1>SriramGanesh</h1>
       <p><em>web-app and website developer</em></p>
       <p>I develop <a href="https://en.wikipedia.org/wiki/Website">website</a> and <a href="https://simple.wikipedia.org/wiki/Web_application">web application</a> on mac and windows </p></td>
